--- a/app/assets/styles/layout/_header.scss
+++ b/app/assets/styles/layout/_header.scss
@@ -4,7 +4,7 @@ header {
     width: 100%;
     transition: background-color 0.3s ease;
     max-width: 100vw;
-    overflow-x: hidden;
+    overflow-x: visible !important;
 }
 
 .header__headband,
